--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
   "dependencies": {
     "@uirouter/angularjs": "^1.0.7",
     "angular": "^1.7.8",
-    "bootstrap": "^4.3.1"
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.7"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.5",
+    "babel-preset-es2015": "^6.24.1"
   }
 }
